Model1 & Markdown Edits

--- a/skiresort_RNotebook.Rmd
+++ b/skiresort_RNotebook.Rmd
@@ -2,49 +2,381 @@
 title: "ECON 344 Final"
 output: 
   html_document:
+    toc: true
+    theme: united
     includes:
       after_body: footer.html
 author: "Brice Wilbanks"
+runtime: shiny
 ---
-<br><br><br><br>
-#Introduction
-First, we must import the libraries needed for the regressions later in this paper. Here, we also define the original dataset and the original time series data for the rest of the paper.
+# Introduction
+First, we must import the libraries needed for the regressions and plotting later in this paper. Here, we also define the original data set and the original time series data.
 
-```{r}
+```{r, results='asis'}
 library(car)
 library(dynlm)
 library(knitr)
+library(stargazer)
+require(ggplot2)
+require(ggiraph)
+require(ggiraphExtra)
+require(plyr)
 skiraw <- read.csv("SkiData_Raw.csv", 
                    sep = ',',
                    stringsAsFactors = FALSE
                    )
 timeseries<-ts(skiraw, start=c(1990,1))
+cormatrix <- cor(timeseries)
+#stargazer(cormatrix, title="Correlation Matrix", type="html")
+```
+# Plotting the Variables
+
+Below are plots for each of the used independent variables (x-axis) against the chosen dependent variable of annual skier visits per acre (y-axis). The interactive tool below allows readers to choose an independent variable of their choice. 
+
+```{r echo = FALSE}
+selectInput("ind_var", "Variable:",
+ c(
+   "Retail Sales Tax Collected"="Retail.Sales.Tax.Collected..Inflation.","Total Retail Sales"="Total.Retail.Sales..Inflation.","Retail Square Footage (Breckenridge)"="Retail.Square.Footage","Unemployment Rate (Summit County)"="Unemployment.Rate..Summit.","CPI (Nation)"="CPI","Total Nearby Housing"="Total.Nearby.Housing","Annual Median Income (Summit County)"="Annual.Income..Summit.","Annual Median Income (Colorado)"="Annual.Income..Colorado.","Green Terrain Percentage"="Skiable.Green.Terrain","Blue Terrain Percentage"="Skiable.Blue.Terrain","Black Terrain Percentage"="Skiable.Black.Terrain","Double Black Terrain Percentage"="Skiable.Double.Black.Terrain","Snowmaking Acres"="Snowmaking.Acres","Breckenridge Permanent Residents"="Breckenridge.Permanent.Residents","Breckenridge Peak Residents"="Breckenridge.Peak.Residents","Upper Blue Permanent Residents"="Upper.Blue.Permanent.Residents","Upper Blue Peak Residents"="Upper.Blue.Peak.Residents","Summit County Permanent Residents"="Summit.County.Permanent.Residents","Summit County Peak Residents"="Summit.County.Peak.Residents")) 
+```
+```{r echo = FALSE}
+renderPlot({
+ggplot(data = skiraw, aes_string(x = input$ind_var, y = "Visitors.by.Acres"))+
+  geom_point()
+})
+
 ```
 
-## Defining the Model
-###See page xx in the paper
 
-We are initially begining with a model including CPI, annual income for Coloradans, unemployment rate in Summit County, and the sales tax collected on retail locations adjusted for inflation in 2020 dollars. We will additionally be lagging the skier visits per year by one year to account for season pass holders and ski trip planners. Public sentiment to skiing can be effected in the half year before the season starts between summer and winter. Thus, we must lag our data to account for this. All definitions can be found on page xx of the paper.
+# Model 1 - The Economy on Skiing
+We are initially beginning with a model including CPI, annual income for Summit County, and the unemployment rate in Summit County. We will additionally be lagging the skier visits per year by one year to account for season pass holders and ski trip planners. Public sentiment to skiing can be effected in the half year before the season starts between summer and winter, thus, we must lag our data to account for this. All definitions of data can be found on page xx of the paper.
 
-```{r}
-kable(skiraw, caption="Data Preview")
-cormax <- cor(timeseries)
-model1_a <- dynlm(lag(Visitors.by.Acres,1)~
+### Model1_a
+We will include all indicators in the economy category at first.
+
+```{r, results='asis'}
+model1_a <- dynlm(Visitors.by.Acres~
+                  lag(Visitors.by.Acres,1)+
                   CPI+
-                  Annual.Income..Colorado.+
-                  Unemployment.Rate..Summit.County.+
-                  
-                  #Sales.Tax.Collected..Retail...Inflation.
+                  Annual.Income..Summit.+
+                  Unemployment.Rate..Summit.
                   ,
              data=timeseries)
-summary(model1_a)
+# f test, use model1_a as unrestricted and use model w/unemployment rate and logCPI (since they are insignificant, keep the rest). compare these models for the F Test
+# 
+# do a heteroskadicity test
+
+model1_a_resid <- resid(model1_a)
+model1_a_resid_squared <- model1_a_resid^2
+model1_a_yhat <- predict(model1_a)
+model1_a_yhat_squared <- model1_a_yhat^2
+model1_a_hetero <- lm(model1_a_resid_squared~model1_a_yhat+model1_a_yhat_squared)
+
+suppressWarnings(
+  stargazer(
+    model1_a,
+    model1_a_hetero,
+    dep.var.labels = c("",""),
+    column.labels = c("Model1 A", "Heteroskedastic Test"),
+    covariate.labels = c("Visitors per Acre Lagged 1 Year", "CPI", "Annual Income" ,"Unemployment", "ŷ",
+                         "ŷ ^ 2", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1A&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
 ```
 
-```{r}
-model2_a <- dynlm(lag(Summit.County.Peak,1)~
-                    Total.Nearby.Housing,
-                    #Summit.County.Peak
+<br>
+Model1_a provides results for significance of annual income in Summit County and CPI. This is a great start but does not tell the whole story. CPI is only partially significant and is negligible in this paper because of its p-value of 0.058. We can attempt to just model CPI and Income to account for spending rather than unemployment. 
+
+From our output, we can see that the result is not heteroskedastic. This is an important element to continue running the linear regression.
+
+### Model1_b
+We will now remove unemployment and just evaluate monetary values to see if there is a difference.
+
+```{r, results='asis'}
+model1_b <- dynlm(Visitors.by.Acres~
+                  lag(Visitors.by.Acres,1)+
+                  CPI+
+                  Annual.Income..Colorado.
+                  ,
+             data=timeseries)
+
+suppressWarnings(
+  stargazer(
+    model1_b,
+    dep.var.labels = c(""),
+    column.labels = c("Model1 b"),
+    covariate.labels = c("Visitors per Acre Lagged 1 Year", "CPI", "Annual Income", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1B&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+```
+
+Interestingly enough, model1_b actually provides less significant results for annual income and CPI meaning that unemployment may be a major factor in skier visits per year. First, we will eliminate the lag. We can hypothesize that income and CPI are elements that are percieved by the consumer in real-time and not delayed. More on this in the paper. We will now isolate these three variables for their own linear regressions. 
+<br><br>
+Jump To...<br>
+[Model1_c](#model1_c) CPI and Annual Income w/o Lag<br>
+[Model1_d](#model1_d) Unemployment<br>
+[Model1_e](#model1_e) CPI & Homoscedasticity<br>
+[Model1_f](#model1_f) Annual Income & Homoscedasticity<br>
+[Plot Maker](#plot-maker) Plot Models
+
+### Model1_c <a name="model1_c"></a> 
+In this model, we will look at real-time CPI and annual income.
+
+```{r, results='asis'}
+model1_c <- dynlm(Visitors.by.Acres~
+                  CPI+
+                  Annual.Income..Colorado.
+                  ,
+             data=timeseries)
+suppressWarnings(
+  stargazer(
+    model1_c,
+    dep.var.labels = c(""),
+    column.labels = c("Model1 c"),
+    covariate.labels = c("CPI", "Annual Income", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1C&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+```
+<br>
+Against the earlier hypothesis for model1_c, we see that even without a lag, CPI and Annual Income are not related to skier visits per acre. We will stop testing this branch of the model and instead focus on isolating some of the economic incicators.
+<br>[Plot This!](#plot-maker)
+
+### Model1_d <a name="model1_d"></a>
+In this model, we look at unemployment.
+```{r, results='asis'}
+model1_d <- dynlm(Visitors.by.Acres~
+                  Unemployment.Rate..Summit.
+                  ,
+             data=timeseries)
+suppressWarnings(
+  stargazer(
+    model1_d,
+    dep.var.labels = c(""),
+    column.labels = c("Model1 b"),
+    covariate.labels = c("Unemployment", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1B&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+
+```
+<br>
+In model1_d, we can see unemployment alone is not significantly correlated to skier visits.
+<br>[Plot This!](#plot-maker)<br>
+
+### Model1_e <a name="model1_e"></a>
+In this model, we look at national CPI.
+```{r, results='asis'}
+model1_e <- dynlm(Visitors.by.Acres~
+                  CPI
+                  ,
+             data=timeseries)
+suppressWarnings(
+  stargazer(
+    model1_e,
+    dep.var.labels = c(""),
+    column.labels = c("Model1 e"),
+    covariate.labels = c("CPI", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1e&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+```
+<br>
+In model1_e, we find that CPI is significant in relation to skier visits per acre. We will also test to ensure homoscedasticity since our p-value is potentially significant. 
+<br>[Plot This!](#plot-maker)
+```{r, results='asis'}
+model1_e_resid <- resid(model1_e)
+model1_e_resid_squared <- model1_e_resid^2
+model1_e_yhat <- predict(model1_e)
+model1_e_yhat_squared <- model1_e_yhat^2
+model1_e_hetero <- lm(model1_e_resid_squared~model1_e_yhat+model1_e_yhat_squared)
+
+suppressWarnings(
+  stargazer(
+    model1_e,
+    model1_e_hetero,
+    dep.var.labels = c("",""),
+    column.labels = c("Model1 E", "Heteroskedastic Test"),
+    covariate.labels = c("Annual Income" , "ŷ","ŷ ^ 2", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1E&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+```
+<br>
+Our test for heteroskedasticity returned results that are almost fully heteroskedastic. Our p-value is just above our alpha of 0.05. We can proceed with caution.
+
+### Model1_f <a name="model1_f"></a>
+In this model, we look at just annual income in Summit County.
+```{r, results='asis'}
+model1_f <- dynlm(Visitors.by.Acres~
+                  Annual.Income..Summit.
+                  ,
+             data=timeseries)
+suppressWarnings(
+  stargazer(
+    model1_f,
+    dep.var.labels = c(""),
+    column.labels = c("Model1 f"),
+    covariate.labels = c("Annual Income (Summit)", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1f&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+```
+<br>
+When not controlling for any other variable, we find that annual income is significantly related to skier visits per year. We will now run a test to ensure homoscedasticity.
+
+```{r, results='asis'}
+model1_f_resid <- resid(model1_f)
+model1_f_resid_squared <- model1_f_resid^2
+model1_f_yhat <- predict(model1_f)
+model1_f_yhat_squared <- model1_f_yhat^2
+model1_f_hetero <- lm(model1_f_resid_squared~model1_f_yhat+model1_f_yhat_squared)
+
+suppressWarnings(
+  stargazer(
+    model1_f,
+    model1_f_hetero,
+    dep.var.labels = c("",""),
+    column.labels = c("Model1 F", "Heteroskedastic Test"),
+    covariate.labels = c("Annual Income" , "ŷ","ŷ ^ 2", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model1F&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+```
+<br>[Plot This!](#plot-maker)
+
+
+# Model 2 - Lodging, Housing, and Population
+In this model, we will be looking at the people's movements and lodging as a factor of skier visits. We only have reliable data for the Upper Blue region of Summit County. 
+```{r, results='asis'}
+model2_a <- dynlm(Visitors.by.Acres~
+                    lag(Visitors.by.Acres,1)+
+                    Upper.Blue.Peak.Residents
                   ,
              data=timeseries)
 summary(model2_a)
 ```
+
+# Model 3 - Skiable Terrain Offered
+In this model, we will be looking at the terrain offered at Breckenridge Ski Resort. During this test, we will also be testing for heteroscedasticity. We will not be lagging the year on this model as skiers pick resorts at real-time for terrain reasons. More on this in the paper.
+```{r, results='asis'}
+model3_a <- dynlm(Visitors.by.Acres~
+                    Skiable.Green.Terrain+
+                    Snowmaking.Acres
+                  ,
+             data=timeseries)
+
+model3_a_resid <- resid(model3_a)
+model3_a_resid_squared <- model3_a_resid^2
+model3_a_yhat <- predict(model3_a)
+model3_a_yhat_squared <- model3_a_yhat^2
+model3_a_hetero <- lm(model3_a_resid_squared~model3_a_yhat+model3_a_yhat_squared)
+
+suppressWarnings(
+  stargazer(
+    model3_a,
+    model3_a_hetero,
+    dep.var.labels = c("",""),
+    column.labels = c("Model3 A", "Heteroskedastic Test"),
+    covariate.labels = c("Green Terrain Percent", "Snowmaking Acres", "ŷ","ŷ ^ 2", "Intercept"),
+    colnames = FALSE,
+    model.numbers = FALSE,
+    type = "html",
+    title = "Model3A&nbsp;Summary",
+    align=TRUE,
+    notes.align = "l",
+    no.space=TRUE,
+    report=('vc*p')
+  )
+)
+```
+<br>[Plot This!](#plot-maker)
+
+# Plot Maker
+```{r echo = FALSE}
+selectInput("user_model", "Model:",
+ c(
+   "model1_a",
+   "model1_b",
+   "model1_c",
+   "model1_d",
+   "model1_e",
+   "model1_f",
+   "model2_a",
+   "model3_a"
+   )
+ )
+
+```
+```{r echo = FALSE}
+renderUI({
+  selectInput("user_x", "Variable:",
+    names(get(input$user_model)$coefficients[-1])
+  )
+})
+```
+```{r echo = FALSE}
+renderPlot({
+ggplot(get(input$user_model), aes_string(x = input$user_x, y = "Visitors.by.Acres")) + 
+  geom_point() +
+  stat_smooth(method = "lm", col = "red")
+})
+```
+
